--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ background-color: rgba(195, 195, 186, 0.4);
     color: rgb(0, 0, 0);
     margin-left: 20px;
     font-size: 1.5rem;
-    font-family: 'Open Sans', cursive;
+    font-family: 'Open Sans';
     transition: color 0.3s ease;
 }
 .nav-bar a:hover{
@@ -62,7 +62,7 @@ background-color: rgba(195, 195, 186, 0.4);
     display: none;
 }
 .name-h h1{
-    font-family: 'Open Sans', cursive;
+    font-family: 'Open Sans';
     font-size: 2.5rem;
     font-weight: 00;
     margin-left: 20px;
@@ -129,4 +129,5 @@ footer{
     align-items: center;
     border-top: 2px solid black;
     margin-top: 50px;
+
 }
