--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ background-color: rgba(195, 195, 186, 0.4);
     border-bottom: 2px solid black;
 }
 .about-section{
-    height: 600px;
+    height: 800px;
     width: 100%;
     padding-left: 3%;
     padding-top: 6%;
@@ -98,9 +98,11 @@ background-color: rgba(195, 195, 186, 0.4);
 }
 .about-section p{
     font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
     margin-top: 20px;
     line-height: 1.6;
-    width: 60%;
+    width: 90%;
+    font-weight: lighter;
 }
 .countries-section{
     height: 800px;
