--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,7 @@ body, html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    transition: background-color 0.3s ease;
-    border-bottom: 2px solid black;
+    transition: background-color 0.6s ease;
 }
 .header:hover{
 background-color: rgba(195, 195, 186, 0.4);
@@ -112,6 +111,32 @@ background-color: rgba(195, 195, 186, 0.4);
 .countries-section h2{
     font-size: 2.5rem;
     margin-bottom: 20px;
+}
+.carousel{
+    width: 90%;
+    height: 500px;
+    margin-top: 30px;
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+}
+.carousel-item{
+    width: 400px;
+    height: 400px;
+    margin-right: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  
+}
+.carousel-item img{
+    width: 100%;
+    height: 80%;
+    border-radius: 10px 10px 0 0;
+    object-fit: contain;
 }
 footer{
     height: 150px;
