--- a/css/style.css
+++ b/css/style.css
@@ -111,26 +111,26 @@ background-color: rgba(195, 195, 186, 0.4);
 .countries-section h2{
     font-size: 2.5rem;
     margin-bottom: 20px;
+    text-align: center;
 }
 .carousel{
-    width: 90%;
+    width: 100%;
     height: 500px;
-    margin-top: 30px;
+    margin-top: 50px;
     display: flex;
+    justify-content: center;
     overflow-x: auto;
+    scrollbar-width: none;
     scroll-behavior: smooth;
 }
 .carousel-item{
-    width: 400px;
+    width: 380px;
     height: 400px;
     margin-right: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  
+    filter: blur(4px);
+    text-align: center;
 }
 .carousel-item img{
     width: 100%;
