--- a/css/style.css
+++ b/css/style.css
@@ -129,14 +129,21 @@ background-color: rgba(195, 195, 186, 0.4);
     margin-right: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    filter: blur(4px);
     text-align: center;
+    opacity: 0.3;
+    transform: scale(0.7);
+    transition: opacity 0.3s ease,transform 0.3s ease;
 }
 .carousel-item img{
     width: 100%;
     height: 80%;
     border-radius: 10px 10px 0 0;
     object-fit: contain;
+}
+.main-item{
+    opacity: 1;
+    transition: opacity 0.8s ease, transform 1s ease;
+     transform: scale(1);
 }
 footer{
     height: 150px;
