--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ background-color: rgba(195, 195, 186, 0.4);
     border-bottom: 2px solid black;
 }
 .about-section{
-    height: 800px;
+    height: 500px;
     width: 100%;
     padding-left: 3%;
     padding-top: 6%;
@@ -119,7 +119,7 @@ background-color: rgba(195, 195, 186, 0.4);
     font-weight: lighter;
 }
 .countries-section{
-    height: 800px;
+    height: 1000px;
     width: 100%;
     padding-left: 3%;
 }
@@ -131,7 +131,7 @@ background-color: rgba(195, 195, 186, 0.4);
 .carousel{
     width: 100%;
     height: 500px;
-    margin-top: 50px;
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     overflow-x: auto;
@@ -140,8 +140,10 @@ background-color: rgba(195, 195, 186, 0.4);
 }
 .carousel-item{
     width: 380px;
-    height: 400px;
+    height: 450px;
     margin-right: 20px;
+    padding-left: 20px;
+    padding-top: 3%;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
@@ -151,7 +153,7 @@ background-color: rgba(195, 195, 186, 0.4);
 }
 .carousel-item img{
     width: 100%;
-    height: 80%;
+    height: 70%;
     border-radius: 10px 10px 0 0;
     object-fit: contain;
 }
@@ -162,7 +164,12 @@ background-color: rgba(195, 195, 186, 0.4);
      cursor: pointer;
 }
 .main-item:hover{
-    transform: scale(1.05); 
+    transform: scale(1.02); 
+}
+.main-item:hover img{
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+    z-index: 100;
 }
 footer{
     height: 150px;
