--- a/css/countries.css
+++ b/css/countries.css
@@ -1,17 +1,55 @@
 h1,
 h2 {
-    font-weight: normal;
-    margin: 0;
-    margin-bottom: 1rem;
+	font-weight: normal;
+	margin: 0;
+	margin-bottom: 1rem;
 }
 
 h1 {
-    display: inline-block;
-    padding-bottom: 4px;
-    border-bottom: 1px solid;
-    padding-right: 5rem;
+	display: inline-block;
+	padding-bottom: 4px;
+	border-bottom: 1px solid;
+	padding-right: 5rem;
 }
 
 p {
-    margin: 0;
+	margin: 0;
+}
+
+body {
+	margin: 0;
+	padding: 0;
+
+	font-family: Arial, sans-serif;
+
+	min-width: 100dvw;
+	min-height: 100dvh;
+}
+
+.background-div {
+	filter: blur(4px);
+	-webkit-filter: blur(4px);
+	box-shadow: 0 0 50px 50px black;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	z-index: -1;
+}
+
+.grid-div {
+	display: grid;
+	grid-template-columns: auto 64rem auto;
+	min-height: 100vh;
+}
+
+.main-div-outer {
+	max-width: 100vw;
+	background-color: white
+}
+
+.main-div-inner {
+	padding: 1rem
 }
