--- a/css/countries.css
+++ b/css/countries.css
@@ -35,13 +35,13 @@ body {
 	background-size: cover;
 	width: 100%;
 	height: 100%;
-	position: absolute;
+	position: fixed;
 	z-index: -1;
 }
 
 .grid-div {
 	display: grid;
-	grid-template-columns: auto 64rem auto;
+	grid-template-columns: auto 40rem 24rem auto;
 	min-height: 100vh;
 }
 
