--- a/css/countries.css
+++ b/css/countries.css
@@ -14,6 +14,7 @@ h1 {
 
 p {
 	margin: 0;
+	font-size: 16px;
 }
 
 body {
@@ -22,8 +23,8 @@ body {
 
 	font-family: Arial, sans-serif;
 
-	min-width: 100dvw;
-	min-height: 100dvh;
+	min-width: 100vw;
+	min-height: 100vh;
 }
 
 .background-div {
@@ -39,6 +40,7 @@ body {
 	z-index: -1;
 }
 
+
 .grid-div {
 	display: grid;
 	grid-template-columns: auto 40rem 24rem auto;
@@ -52,4 +54,34 @@ body {
 
 .main-div-inner {
 	padding: 1rem
+}
+
+.flag {
+	width: 16rem;
+	float: left;
+	padding: 1rem;
+}
+
+.large-image {
+	width: 32rem;
+}
+
+.list-image {
+	float: right;
+	width: 18rem;
+}
+
+@media all and (max-width: 64rem) {
+	p {
+		padding-bottom: 1rem;
+	}
+
+	img {
+		float: unset !important;
+		width: 90% !important;
+	}
+
+	.grid-div {
+		display: block;
+	}
 }
