--- a/css/countries.css
+++ b/css/countries.css
@@ -50,11 +50,11 @@ body {
 
 .main-div-outer {
 	max-width: 100vw;
-	background-color: white
+	background-color: white;
 }
 
 .main-div-inner {
-	padding: 1rem
+	margin: 1rem;
 }
 
 .flag {
@@ -69,6 +69,7 @@ body {
 .list-image {
 	float: right;
 	width: 18rem;
+	height: 12rem;
 }
 
 @media all and (max-width: 64rem) {
