Display None instead of Opacity 0
Opacity 0 means that the user can still click the element even though
it's invisibile. This behavior is disabled by display: none

--- a/css/shared.css
+++ b/css/shared.css
@@ -36,7 +36,7 @@ header:hover {
 }
 
 .dropdown-menu {
-	opacity: 0;
+	display: none;
 }
 
 .nav-bar {
@@ -82,5 +82,5 @@ header:hover {
 }
 
 .show {
-	opacity: 1;
+	display: block;
 }
